Fix dash edit panel z-index (#41)

--- a/src/ui/units/dash/containers/Body/Body.scss
+++ b/src/ui/units/dash/containers/Body/Body.scss
@@ -39,7 +39,6 @@ $contentMobilePadding: 16px;
         }
 
         & #{$bodyClass}__edit-panel {
-            z-index: 100;
             left: calc(50vw + #{$sideMenuCompactWidth} / 2);
         }
 
